@@ -9,6 +9,7 @@ about future releases, check `milestones`_ and :doc:`/about/vision`.
 ----------------
 
 - Add a default timeout to 15 seconds to the client
+- Catch and raise AdobeSign API max rate limit
 
 
 
